--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -3,7 +3,7 @@
 {% block head %}
     <script type="text/javascript">
 
-    function generate_key() {
+    function show_public_key() {
 
         let pub_input = $('#id_deploy_key_pub');
 
@@ -26,6 +26,35 @@
                 .done(function (data) {
                     pub_input.val(data['pub']);
                     $('#deploy_key_modal').modal();
+                });
+    }
+
+    function push_local_changes() {
+
+        let doc = $(document.documentElement);
+        doc.css('cursor', 'progress');
+
+        let data = {
+            'name': '{{ repo_name }}',
+        }
+
+        $.ajax({
+                method: "POST",
+                url: "/panhandler/push",
+                headers: {'X-CSRFToken': '{{ csrf_token }}'},
+                contentType: "application/json",
+                dataType: "json",
+                data: JSON.stringify(data)
+            })
+                .fail(function (message) {
+                    alert(message);
+                    doc.css('cursor', '');
+                    console.log(message)
+                })
+                .done(function (data) {
+                    if (confirm(data['status'])) {
+                        window.location = "/panhandler/update_repo/{{ repo_name }}/{{ repo_detail.branch }}";
+                    }
                 });
     }
     </script>
@@ -73,10 +102,12 @@
                    class="btn btn-primary mr-2">Update To Latest</a>
                 <a href="/panhandler/remove_repo/{{ repo_name }}" class="btn btn-danger mr-2">Remove Repository</a>
                 <a href="/panhandler/repos" class="btn btn-secondary mr-2">Repositories</a>
-                {% if repo_record.deploy_key_priv != ''  %}
-                    <a href="#" onclick="push_local_changes()" class="btn btn-success mr-2">Push Local Changes</a>
-                {% else %}
-                    <a href="#" onclick="generate_key()" class="btn btn-success mr-2">Generate SSH Deploy Key</a>
+                {% if repo_detail.public_key_path|default:''|default_if_none:'' != ''  %}
+
+                    <a href="#" onclick="push_local_changes()" class="btn btn-success mr-2"
+                    title="{{ status }}">Push Local Changes</a>
+
+                    <a href="#" onclick="show_public_key()" class="btn btn-primary mr-2">Show SSH Deploy Key</a>
                 {% endif %}
             </p>
             <h5 class="card-title">Latest Updates</h5>
